--- a/Android/ProyectoADBJ/app/src/main/res/layout/activity_main.xml
+++ b/Android/ProyectoADBJ/app/src/main/res/layout/activity_main.xml
@@ -9,12 +9,21 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#003E7ECC"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:background="#3F7CB4"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"></LinearLayout>
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="match_parent"
+            android:layout_height="157dp"
+            tools:srcCompat="@tools:sample/backgrounds/scenic[1]" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
