--- a/Android/ProyectoADBJ/app/src/main/res/layout/activity_main.xml
+++ b/Android/ProyectoADBJ/app/src/main/res/layout/activity_main.xml
@@ -56,5 +56,11 @@
                 android:ems="10"
                 android:inputType="textPassword" />
         </LinearLayout>
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Boton Github" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
