Agregue una imagen.

--- a/Android/ProyectoADBJ/app/src/main/res/layout/activity_main.xml
+++ b/Android/ProyectoADBJ/app/src/main/res/layout/activity_main.xml
@@ -62,5 +62,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Boton Github" />
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/gymgirl" />
+
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
