--- a/Android/ProyectoADBJ/app/src/main/res/layout/activity_3.xml
+++ b/Android/ProyectoADBJ/app/src/main/res/layout/activity_3.xml
@@ -6,15 +6,16 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".MainActivity"
+    android:background="#3F7CB4"
     android:layout_margin="25dp">
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/lblMenu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
-        android:text="Informacion"
+        android:text="Información"
         android:textAlignment="center"
         android:textSize="30sp" />
 
