--- a/Android/ProyectoADBJ/app/src/main/res/layout/activity_menu_info.xml
+++ b/Android/ProyectoADBJ/app/src/main/res/layout/activity_menu_info.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity"
+    tools:context=".menuInfo"
     android:background="#3F7CB4"
     android:layout_margin="25dp">
 
