--- a/Android/ProyectoADBJ/app/src/main/res/layout/activity_main.xml
+++ b/Android/ProyectoADBJ/app/src/main/res/layout/activity_main.xml
@@ -73,12 +73,28 @@
 
         </LinearLayout>
 
-        <Button
-            android:id="@+id/btLogin"
-            android:layout_width="300dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center"
-            android:background="@drawable/button_round"
-            android:text="Iniciar Sesion" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/btLogin"
+                android:layout_width="300dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:background="@drawable/button_round"
+                android:text="Iniciar Sesion" />
+
+            <Button
+                android:id="@+id/btSignup"
+                android:layout_width="300dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/button_round"
+                android:text="Crear Nueva Cuenta" />
+        </LinearLayout>
+
     </LinearLayout>
 </LinearLayout>
