--- a/Android/ProyectoADBJ/app/src/main/res/layout/activity_menu_info.xml
+++ b/Android/ProyectoADBJ/app/src/main/res/layout/activity_menu_info.xml
@@ -22,6 +22,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="180dp"
+        android:layout_margin="10dp"
         android:orientation="horizontal">
 
         <ImageView
@@ -35,15 +36,17 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="10dp"
         android:layout_marginTop="10dp"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/textView3"
-            android:layout_width="match_parent"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Horario" />
+            android:text="Horario"
+            android:textSize="20sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -56,21 +59,24 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Lunes a Viernes 6:00-23:00" />
+                android:text="Lunes a Viernes 6:00-23:00"
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/textView6"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Sabado 9:00-19:00" />
+                android:text="Sabado 9:00-19:00"
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/textView9"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Domingo 9:00-14:00" />
+                android:text="Domingo 9:00-14:00"
+                android:textSize="20sp" />
 
         </LinearLayout>
 
@@ -79,43 +85,49 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/textView10"
-            android:layout_width="match_parent"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Contacto" />
+            android:text="Contacto"
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/textView11"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Fono +56912345678" />
+            android:text="Fono +56912345678"
+            android:textSize="20sp" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="10dp"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/textView12"
-            android:layout_width="match_parent"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Direccion" />
+            android:text="Direccion"
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/textView13"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Carretera del Cobre 666" />
+            android:text="Carretera del Cobre 666"
+            android:textSize="20sp" />
 
     </LinearLayout>
 
@@ -124,6 +136,7 @@
         android:layout_width="300dp"
         android:layout_height="40dp"
         android:layout_gravity="center"
+        android:layout_margin="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:text="Ver en Mapa"
