--- a/Android/ProyectoADBJ/app/src/main/res/layout/activity_menu_info.xml
+++ b/Android/ProyectoADBJ/app/src/main/res/layout/activity_menu_info.xml
@@ -4,10 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".menuInfo"
     android:background="#3F7CB4"
-    android:layout_margin="25dp">
+    android:orientation="vertical"
+    tools:context=".menuInfo">
 
     <TextView
         android:id="@+id/lblMenu"
@@ -111,6 +110,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
+        android:layout_marginBottom="10dp"
         android:orientation="horizontal">
 
         <TextView
@@ -132,16 +132,21 @@
     </LinearLayout>
 
     <ToggleButton
-        android:id="@+id/button3"
+        android:id="@+id/tbtMapa"
         android:layout_width="300dp"
         android:layout_height="40dp"
         android:layout_gravity="center"
         android:layout_margin="10dp"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
         android:text="Ver en Mapa"
         android:textOff="Ver en Mapa"
         android:textOn="Cerrar Mapa"
         android:textSize="12sp" />
+
+    <ImageView
+        android:id="@+id/imgMapa"
+        android:layout_width="match_parent"
+        android:layout_height="180dp"
+        app:srcCompat="@drawable/foto8" />
 
 </LinearLayout>
