Scrollview añadido en trainers

--- a/ProyectoADBJ/app/src/main/res/layout/fragment_tab_clases.xml
+++ b/ProyectoADBJ/app/src/main/res/layout/fragment_tab_clases.xml
@@ -6,9 +6,23 @@
     tools:context=".tabClases">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/tabClases"/>
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </LinearLayout>
+
+
+
+    </ScrollView>
 
 </FrameLayout>
