--- a/ProyectoADBJ/app/src/main/res/drawable/button_round.xml
+++ b/ProyectoADBJ/app/src/main/res/drawable/button_round.xml
@@ -3,7 +3,9 @@
 
     android:shape="rectangle">
 
-    <solid android:color="#ffff"/>
+    <solid android:color="#25364F"/>
+    <stroke android:width="3dp"
+            android:color="#913E53"/>
     <corners android:radius="50dp"/>
 
 </shape>
