--- a/ProyectoADBJ/app/src/main/res/layout/activity_main.xml
+++ b/ProyectoADBJ/app/src/main/res/layout/activity_main.xml
@@ -3,14 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@drawable/background"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#8395a7"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,19 +22,11 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                app:srcCompat="@drawable/gym_logo" />
-        </LinearLayout>
+            android:orientation="vertical" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="180dp"
+            android:layout_height="151dp"
             android:layout_marginTop="20dp"
             android:orientation="vertical">
 
@@ -42,7 +34,7 @@
             <EditText
                 android:id="@+id/txUser"
                 style="@style/Widget.AppCompat.EditText"
-                android:layout_width="300dp"
+                android:layout_width="202dp"
                 android:layout_height="45dp"
                 android:layout_gravity="center"
                 android:layout_margin="20dp"
@@ -56,7 +48,7 @@
             <EditText
                 android:id="@+id/txPassword"
                 style="@style/Widget.AppCompat.EditText"
-                android:layout_width="300dp"
+                android:layout_width="202dp"
                 android:layout_height="45dp"
                 android:layout_gravity="center"
                 android:background="@drawable/edit_round"
@@ -65,8 +57,6 @@
                 android:hint="CONTRASEÑA"
                 android:inputType="textPassword"
                 android:selectAllOnFocus="false" />
-
-
         </LinearLayout>
 
         <LinearLayout
@@ -76,21 +66,49 @@
 
             <Button
                 android:id="@+id/btLogin"
-                android:layout_width="300dp"
-                android:layout_height="50dp"
+                android:layout_width="148dp"
+                android:layout_height="47dp"
                 android:layout_gravity="center"
                 android:background="@drawable/button_round"
-                android:text="Iniciar Sesion" />
+                android:text="Iniciar Sesión"
+                android:textColor="#FFFFFF" />
 
-            <Button
-                android:id="@+id/btSignup"
-                android:layout_width="300dp"
-                android:layout_height="50dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="20dp"
-                android:background="@drawable/button_round"
-                android:text="Crear Nueva Cuenta" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="274dp"
+            android:gravity="bottom|left"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="bottom|left"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textView32"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:text="¿Aún no eres un miembro?"
+                    android:textSize="15sp" />
+
+                <TextView
+                    android:id="@+id/txSignup"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_weight="1"
+                    android:text="Registrate"
+                    android:textColor="#F64658"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
         </LinearLayout>
 
     </LinearLayout>
+
 </LinearLayout>
