--- a/ProyectoADBJ/app/src/main/res/values/colors.xml
+++ b/ProyectoADBJ/app/src/main/res/values/colors.xml
@@ -3,5 +3,5 @@
     <color name="colorPrimary">#6DB864</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
-    <color name="gymFondo">#c8d6e5</color>
+    <color name="gymFondo">#25374F</color>
 </resources>
